--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,7 @@ body{
   text-decoration: none;
  
 }
+
 .travel{
   color: #FF5400;
 }
@@ -98,8 +99,6 @@ body{
  margin-top: 14px;
 }
 .banner-input-field{
-  /* margin-top: 80px;
-  margin-bottom: 30px; */
   margin: 50px auto;
   width: 800px;
   height: 84px;
@@ -110,18 +109,11 @@ display: flex;
 justify-content: center;
 align-items: center;
 }
-.input-div{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: -60px;
-
-}
 button{
   width: 174px;
   height: 52px;
   border-radius: 8px;
-  background-color: #FF5400;
+  /* background-color: #FF5400; */
   border: none;
  margin: 10px;
  font-size: 16px;
@@ -129,7 +121,54 @@ button{
  outline: none;
  color: rgb(255, 255, 255);
 }
+/* popular style  */
+.popular-container{
+  width: 90%;
+  display: flex;
+  margin: 20px auto;
+  column-gap:76px;
+ 
+}
+.popular-content{
+ width: 48%;
+ height: 550px;
+ /* border:1px solid green; */
+ 
+}
+.popular-image{
+  width: 48%;
+  height: 550px;
+  
+  /* border: 1px solid slateblue; */
+}
+.popular-image img{
+width: 100%;
+height: 100%;
+object-fit: cover;
+border-radius: 8px;
 
+}
+.p-description{
+  margin-bottom: 30px;
+}
+.title{
+  font-size: 40px;
+  font-weight: 800;
+  margin-bottom: 40px;
+
+}
+.p-li-content li{
+  margin-bottom: 30px;
+  margin-top: 20px;
+}
+.p-li-content{
+  padding-left: 40px;
+  
+}
+.popular-content button{
+margin-top: 55px;
+background-color: #FF5400;
+}
 
 
 /* small or mobile device responsive */
@@ -147,6 +186,9 @@ button{
   .ul-link :hover{
     background-color: beige;
   }
+  /* .bar{
+    display: block;
+  } */
 }
 /* medium or tablet device responsive */
 @media screen and (min-width:576px) and (max-width:992px) {
