--- a/css/style.css
+++ b/css/style.css
@@ -173,7 +173,7 @@ background-color: #FF5400;
 
 /* small or mobile device responsive */
 @media screen and (max-width:576px) {
-  .nav-container,.ul-link{
+  .nav-container,.ul-link,.popular-container{
     flex-direction: column;
     gap:10px;
     margin-bottom: 10px;
@@ -186,9 +186,24 @@ background-color: #FF5400;
   .ul-link :hover{
     background-color: beige;
   }
-  /* .bar{
-    display: block;
-  } */
+  .title{
+    font-size: 25px;
+    margin-bottom: 10px;
+   }
+   .title{
+    font-size: 25px;
+   }
+   .popular-content{
+     width: 100%;
+   }
+   .popular-image{
+    margin-top: 60px;
+     width: 100%;
+     height: 100%;
+   
+   }
+
+ 
 }
 /* medium or tablet device responsive */
 @media screen and (min-width:576px) and (max-width:992px) {
@@ -197,4 +212,8 @@ background-color: #FF5400;
     gap:10px;
     margin-bottom: 10px;
   }
+  .popular-content button{
+    margin-top: 0px;
+  }
+
 }
