--- a/css/style.css
+++ b/css/style.css
@@ -288,7 +288,94 @@ filter: brightness(70%);
   position:relative;
   filter: brightness(70%);
  }
-
+ .why-container{
+  width: 90%;
+  margin: 0px auto;
+  margin-top: 100px;
+  /* border: 2px solid red; */
+ 
+ }
+ .why-title{
+  text-align: center;
+  font-size: 2rem;
+  margin-bottom: 0;
+  font-weight: 800;
+ }
+ .why-desc{
+  width: 643px;
+  height: 52px;
+  text-align: center;
+  font-size: 1rem;
+  font-weight: 400;
+  margin: 0 auto;
+  margin-bottom: 50px;
+  color: rgba(19, 19, 24, 0.7);
+ }
+ .hotel-content{
+  width: 50%;
+  border-radius: 8px;
+  background-color: rgba(251, 181, 99, 0.05);
+  margin: 30px;
+  /* border: 1px solid rgb(0, 145, 104); */
+ }
+ .hotel-service{
+  width: 50%;
+  border-radius: 8px;
+  background-color: 1px	Inside
+  rgba(41, 206, 246, 0.2);
+  margin: 30px;
+ 
+  /* border: 1px solid red; */
+ }
+ .main-content{
+  display: flex;
+  padding: 20px;
+  margin: 10px;
+ }
+ .content-title{
+  text-align: start;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  font-size: 1.2rem;
+  font-weight: 900;
+ }
+ .hotel-content img{
+ width: 70px;
+ height: 70px;
+ }
+ .content-desc{
+  text-align: start;
+  padding-right: 60px;
+  color: rgb(90, 90, 93);
+ }
+ .hotel-desc{
+  text-align: start;
+  padding-right: 60px;
+  color: rgb(90, 90, 93);
+ }
+ .best-price{
+  width: 480px;
+  height: 216px;
+ margin: 0px auto;
+ margin-bottom: 80px;
+  background-color: rgba(233, 68, 68, 0.05);
+  border-radius: 8px;
+ }
+ .best-price img{
+  width: 80px;
+  height: 80px;
+  padding-left: 20px;
+ }
+ .price-desc{
+ padding: 20px;
+ color: rgb(90, 90, 93);
+ font-size: 1rem;
+ font-weight: 400;
+ 
+ }
+ .price-title{
+  padding-left: 20px;
+ }
 
 /* small or mobile device responsive */
 @media screen and (max-width:576px) {
@@ -297,11 +384,31 @@ filter: brightness(70%);
     gap:10px;
     margin-bottom: 10px;
   }
+  .why-container{
+    width: 100%;
+  }
+  .why-title{
+    margin-bottom: 25px;
+    margin-left: 28px;
+  }
+  .why-desc{
+    margin-left: 28px;
+    width: 100%;
+  }
+  .main-content{
+    flex-direction: column;
+    width: 100%;
+  }
+  .hotel-content,.hotel-service,.best-price{
+    width: 100%;
+  }
   .destination-row-1{
     grid-template-columns: repeat(1,1fr);
+   
   }
   .destination-row-2,.destination-row-3{
     grid-template-columns: repeat(1, 1fr);
+   
   }
   .banner-input-field{
     flex-direction: column;
@@ -327,6 +434,7 @@ filter: brightness(70%);
      height: 100%;
    
    }
+   
   
 
  
